2000-11-03  Lars Wirzenius  <liw@iki.fi>

	* gwlib/http.[ch]: First cut at changing the HTTP server side
	interface to be more sensible about the number of threads. Doesn't
	work quite well yet (i.e., if I change test/test_http_server.c,
	make check fails), but I want it committed for now. Shouldn't
	harm anyone, as long as they don't use it.

2000-11-02  Paul Keogh  <paul.keogh@anam.com>

	* gw/cookies.c: Fix for some cookie management bugs.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gwlib/gwthread-pthread.c: Fix memory leak if poll() was
	interrupted.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gw/smsc_emi.c: Cleaned up a bit, made thread-safe.

	* gw/smsc_p.h, gw/smsc.c: Declare and initialize new EMI fields.

2000-11-01  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: Make octstr_read_file use a smaller buffer,
	to reduce stack usage.

2000-11-01  Lars Wirzenius  <liw@iki.fi>

	* gw/wap-appl.c: Implement magic URL kannel:alive, based on
	patch from Neil Hunter.

2000-11-01  Lars Wirzenius  <liw@iki.fi>

	* gwlib/gwlib.h, gwlib/list.c: Move around include for gwmem.h
	so it comes after thread.h, because thread.h includes pthread.h,
	and Cygwin's pthread.h includes malloc.h, which gets annoyed by
	the macros gwmem.h defines.

2000-11-01  Kalle Marjola  <rpr@wapit.com>

	* gwlib/conffile.c (config_sanity_check): fixed that 'otaconfig'
	is accepted, too, thanks to Philip Psiloinis for pointing this out

	* gw/bb_smsc.c: make sure that lists are emptied

2000-11-01  Yann Muller  <ymuller@3glab.com>

	* gw/smsc_at.c: handles message lengths of 8*n+1 properly.
	Added comments to encode7bituncompressed().

2000-10-31  Richard Braakman  <dark@wapit.com>

	* gwlib/fdset.c: Handle EINTR.

2000-10-31  Richard Braakman  <dark@wapit.com>

	* Moved wap_addr functions from wapbox.c to new file wap_addr.c,
	and created wap_addr.h for it.

2000-10-31  Richard Braakman  <dark@wapit.com>

	* gwlib/conn.[ch]: Make it possible to change the callback info